--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+    padding-top: 80px;
     div {
       @media @phone {
           margin: 10px auto;
