--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,7 @@
 
 
 #navigation {
+    position: fixed;
     .setup-flex(column,center);
     align-items: center;
     width: 100%; 
